fix preference value typo that prevents obsidian specification from persisting

--- a/addon/chrome/content/preferences.xhtml
+++ b/addon/chrome/content/preferences.xhtml
@@ -223,7 +223,7 @@
       <groupbox>
         <radio
           id="zotero-prefpane-__addonRef__-mdeditor-obsidian"
-          value="path"
+          value="obsidian"
           label="Obsidian"
           class="mdbc-pref-radio-main"
           oncommand="document.getElementById('zotero-prefpane-__addonRef__-mdeditor-obsidian-options').setAttribute('style', 'opacity: 100%;'); document.getElementById('zotero-prefpane-__addonRef__-mdeditor-logseq-options').setAttribute('style', 'opacity: 30%;'); document.getElementById('zotero-prefpane-__addonRef__-mdeditor-system-options').setAttribute('style', 'opacity: 30%;');" />
