move to tsconfig.prod for build directive

--- a/addon/chrome/content/preferences.xhtml
+++ b/addon/chrome/content/preferences.xhtml
@@ -98,7 +98,7 @@
 
   <groupbox class="mdbc-pref-section-box">
     <caption class="mdbc-pref-section-title">
-      Match Markdown Files to Zotero Items using:
+      Match Markdown Files to Zotero Items Using:
     </caption>
 
     <radiogroup
