--- a/addon/content/preferences.xhtml
+++ b/addon/content/preferences.xhtml
@@ -15,7 +15,7 @@
 </linkset>
 <vbox
   id="zotero-prefpane-__addonRef__"
-  onload="Zotero.__addonInstance__.hooks.onPrefsEvent('load', {window})">
+  onload="Zotero.__addonInstance__.hooks.onPrefsEvent('load', { window });">
   <groupbox>
     <!--<label class="mdbc-pref-text-center"><html:h1 data-l10n-id="pref-title"> </html:h1></label>-->
     <!--<caption-->
@@ -42,7 +42,7 @@
         <html:input
           type="text"
           id="zotero-prefpane-__addonRef__-sourcedir"
-          preference="__prefsPrefix__.sourcedir"
+          preference="sourcedir"
           readonly="true"
           class="mdbc-pref-textbox-flex1" />
         <button
@@ -57,7 +57,7 @@
 
     <radiogroup
       id="zotero-prefpane-__addonRef__-filefilterstrategy"
-      preference="__prefsPrefix__.filefilterstrategy">
+      preference="filefilterstrategy">
       <radio
         id="zotero-prefpane-__addonRef__-filefilterstrategy-default"
         value="default"
@@ -98,7 +98,7 @@
           ><html:input
             type="text"
             id="zotero-prefpane-__addonRef__-filepattern"
-            preference="__prefsPrefix__.filepattern"
+            preference="filepattern"
             class="mdbc-pref-textbox-partialwidth"
             onchange="return Zotero.__addonInstance__.hooks.onPrefsEvent('checkRegExpValid', {value: this.value})" /><html:span class="mdbc-pref-options-span-right mdbc-pref-options-code-span"
             ><html:code>/i</html:code></html:span
@@ -124,7 +124,7 @@
 
     <radiogroup
       id="zotero-prefpane-__addonRef__-matchstrategy"
-      preference="__prefsPrefix__.matchstrategy">
+      preference="matchstrategy">
       <groupbox>
         <radio
           id="zotero-prefpane-__addonRef__-matchstrategy-bbtcitekeyyaml"
@@ -147,7 +147,7 @@
             ><html:input
               type="text"
               id="zotero-prefpane-__addonRef__-bbtyamlkeyword"
-              preference="__prefsPrefix__.bbtyamlkeyword"
+              preference="bbtyamlkeyword"
               class="mdbc-pref-textbox-partialwidth"
               onchange="Zotero.__addonInstance__.hooks.onPrefsEvent('checkMetadataFormat', {value: this.value})" /><html:span class="mdbc-pref-options-span-right"> </html:span>
           </hbox>
@@ -182,7 +182,7 @@
             ><html:input
               type="text"
               id="zotero-prefpane-__addonRef__-bbtregexp"
-              preference="__prefsPrefix__.bbtregexp"
+              preference="bbtregexp"
               class="mdbc-pref-textbox-partialwidth"
               onchange="return Zotero.__addonInstance__.hooks.onPrefsEvent('checkRegExpValid', {value: this.value})" /><html:span class="mdbc-pref-options-span-right mdbc-pref-options-code-span"
               ><html:code>/m</html:code></html:span
@@ -221,7 +221,7 @@
             ><html:input
               type="text"
               id="zotero-prefpane-__addonRef__-zotkeyregexp"
-              preference="__prefsPrefix__.zotkeyregexp"
+              preference="zotkeyregexp"
               class="mdbc-pref-textbox-partialwidth"
               onchange="return Zotero.__addonInstance__.hooks.onPrefsEvent('checkRegExpValid', {value: this.value})" /><html:span class="mdbc-pref-options-span-right mdbc-pref-options-code-span"
               ><html:code>/m</html:code></html:span
@@ -247,7 +247,7 @@
 
     <radiogroup
       id="zotero-prefpane-__addonRef__-mdeditor"
-      preference="__prefsPrefix__.mdeditor">
+      preference="mdeditor">
       <!-- obsidian file resolution -->
       <groupbox>
         <radio
@@ -267,7 +267,7 @@
               ><html:input
                 type="text"
                 id="zotero-prefpane-__addonRef__-obsidianvaultname"
-                preference="__prefsPrefix__.obsidianvaultname"
+                preference="obsidianvaultname"
                 class="mdbc-pref-textbox-partialwidth" /><html:span class="mdbc-pref-options-span-right"> </html:span>
             </hbox>
             <label class="mdbc-pref-explication-minor"
@@ -278,14 +278,27 @@
           <separator />
 
           <groupbox>
-            <!-- filename or file path -->
-            <checkbox
-              label="Use filename instead of filepath in URI"
-              id="zotero-prefpane-__addonRef__-obsidianresolvewithfile"
-              preference="__prefsPrefix__.obsidianresolvewithfile" />
             <description class="mdbc-pref-explication-minor mdbc-pref-description-indent"
               >Use only the filename in the URI rather than using the full file path. This is only advised if the default is not working.</description
             >
+            <hbox>
+              <hbox align="center">
+                <label value="URI param" />
+                <menulist
+                  id="zotero-prefpane-__addonRef__-obsidianresolvespec"
+                  preference="obsidianresolvespec"
+                  native="true">
+                  <menupopup>
+                    <menuitem
+                      label="Path (recommended)"
+                      value="path" />
+                    <menuitem
+                      label="File"
+                      value="file" />
+                  </menupopup>
+                </menulist>
+              </hbox>
+            </hbox>
           </groupbox>
         </html:div>
       </groupbox>
@@ -310,7 +323,7 @@
               ><html:input
                 type="text"
                 id="zotero-prefpane-__addonRef__-logseqgraph"
-                preference="__prefsPrefix__.logseqgraph"
+                preference="logseqgraph"
                 class="mdbc-pref-textbox-partialwidth" /><html:span class="mdbc-pref-options-span-right"> </html:span>
             </hbox>
             <label
@@ -324,7 +337,7 @@
               ><html:input
                 type="text"
                 id="zotero-prefpane-__addonRef__-logseqprefix"
-                preference="__prefsPrefix__.logseqprefix"
+                preference="logseqprefix"
                 class="mdbc-pref-textbox-partialwidth" /><html:span class="mdbc-pref-options-span-right"> </html:span>
             </hbox>
             <label
@@ -378,7 +391,7 @@
           ><html:input
             type="text"
             id="zotero-prefpane-__addonRef__-tagstr"
-            preference="__prefsPrefix__.tagstr"
+            preference="tagstr"
             class="mdbc-pref-textbox-partialwidth"
             onchange="Zotero.__addonInstance__.hooks.onPrefsEvent('checkTagStr', {value: this.value})" /><html:span class="mdbc-pref-options-span-right"> </html:span>
         </hbox>
@@ -394,7 +407,7 @@
         <description>Whether to include items in Group Libraries when matching MD files, or only search for matches in the User Library.</description>
         <radiogroup
           id="zotero-prefpane-__addonRef__-grouplibraries"
-          preference="__prefsPrefix__.grouplibraries">
+          preference="grouplibraries">
           <radio
             label="Only match items in User Library."
             value="user" />
@@ -415,7 +428,7 @@
         <description>Whether to remove tags from Zotero items when no Markdown file is found.</description>
         <radiogroup
           id="zotero-prefpane-__addonRef__-removetags"
-          preference="__prefsPrefix__.removetags">
+          preference="removetags">
           <radio
             label="Keep Zotero tags synced with Markdown Database (recommended)."
             value="keepsynced" />
@@ -480,7 +493,7 @@
               <label value="Debug Log Level" />
               <menulist
                 id="zotero-prefpane-__addonRef__-debugmode"
-                preference="__prefsPrefix__.debugmode"
+                preference="debugmode"
                 native="true">
                 <menupopup>
                   <menuitem
@@ -500,7 +513,6 @@
 
   <!--<separator />-->
 </vbox>
-
 
 <vbox>
   <html:label
